# daily-multi-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: life-reminder-tick.yml
agents/: rules.md
api/: __init__.py  index.py  life_reminder_tick.py  life_telegram_webhook.py  telegram_webhook.py
docker/dozzle/: docker-compose.yml
docker/postgres/: .env.example  docker-compose.yml
docs/: bot-pipelines.md  deployment.md  development.md  setup-local.md  setup-production.md  setup.md
docs/superpowers/plans/: 2026-03-23-telegram-finance-bot-mvp.md  2026-03-23-vercel-webhook-refactor.md
docs/superpowers/specs/: 2026-03-23-telegram-finance-bot-design.md  2026-03-23-vercel-webhook-design.md
src/bot_finance_telegram/: __init__.py  app.py  categories.py  config.py  handlers.py  models.py  runtime.py
src/bot_finance_telegram/prompts/: receipt_image_parser.txt  transaction_parser.txt
src/bot_finance_telegram/services/: gemini_client.py  sheets_client.py  state_store.py  summary_service.py
src/bot_platform/bots/finance/: DEVELOPMENT.md  README.md  SETUP.md  models.py
src/bot_platform/bots/life/: DEVELOPMENT.md  README.md  SETUP.md
src/bot_platform/shared/ai/: __init__.py  error_catalog.py  gemini_base.py  openrouter_base.py  provider_exhaustion.py  rotating_client.py
src/bot_platform/shared/bootstrap/: __init__.py  factory.py
src/bot_platform/shared/config/: __init__.py  settings.py
tests/: conftest.py  test_app.py  test_command_parser.py  test_config_and_sheets.py  test_date_parser.py  test_env_loading.py  test_gemini_client.py  test_handlers.py  test_models.py  test_summary_service.py  test_webhook.py
(+72 files in other folders)
